--- a/src/components/_cards/Project/Project.module.scss
+++ b/src/components/_cards/Project/Project.module.scss
@@ -41,12 +41,11 @@
       display: flex;
       flex-wrap: wrap;
       align-items: center;
+      gap: var(--spacing-s);
 
       .language {
         display: flex;
         align-items: center;
-        gap: var(--spacing-s);
-        margin-bottom: var(--spacing-s);
         color: var(--primary-100);
         font-weight: 400;
         font-size: var(--font-size-sm);
@@ -57,7 +56,7 @@
           display: inline-block;
           width: 0.3rem;
           height: 0.3rem;
-          margin-right: var(--spacing-s);
+          margin-left: var(--spacing-s);
           border-radius: 50%;
           background-color: var(--primary-100);
         }
