--- a/src/components/_scopes/form/ContactForm/ContactForm.module.scss
+++ b/src/components/_scopes/form/ContactForm/ContactForm.module.scss
@@ -18,8 +18,8 @@
 
   .required {
     position: relative;
-    bottom: var(--spacing-xxs);
-    left: var(--spacing-xxs);
+    bottom: var(--spacing-xs);
+    left: var(--spacing-xs);
     color: var(--primary-100);
     font-weight: bold;
   }
