--- a/src/styles/spacing.scss
+++ b/src/styles/spacing.scss
@@ -1,5 +1,5 @@
 html {
-  --spacing-xxs: 0.25rem;
+  --spacing-xs: 0.25rem;
   --spacing-s: 0.5rem;
   --spacing-base: 0.75rem;
   --spacing-md: 1.25rem;
